Se ha establecido una forma básica de actualización de estados
